1주차 공부 계획 작성

--- a/roadmap/1단계_웹_네트워크.md
+++ b/roadmap/1단계_웹_네트워크.md
@@ -13,6 +13,7 @@
 ---
 
 ## ✅ 체크리스트
+
 - [ ] 브라우저 렌더링 과정 정리
 - [ ] 이벤트 루프 & 마이크로태스크 이해
 - [ ] HTTP 요청/응답 구조 & 상태 코드 학습
@@ -23,8 +24,229 @@
 - [ ] API 캐싱 전략 적용 실습
 
 ---
+## 📅 1단계 상세 학습 계획 (웹 & 네트워크 기초, 4주)
+
+### **1주차: 브라우저 동작 원리 이해**
+
+- **이론 학습**
+    
+    - 브라우저의 렌더링 과정:  
+        DOM → CSSOM → Render Tree → Layout → Paint → Composite
+        
+    - Reflow vs Repaint 차이
+        
+    - 이벤트 루프(Event Loop)와 마이크로태스크(Microtask)
+        
+- **실습**
+    
+    - Chrome DevTools Performance 탭으로 Reflow/Repaint 발생 확인
+        
+    - `setTimeout`, `Promise`, `async/await`를 섞어 이벤트 루프 동작 실험
+        
+
+---
+
+### **2주차: 네트워크 기본**
+
+- **이론 학습**
+    
+    - HTTP/HTTPS 구조, 요청/응답 흐름
+        
+    - 상태 코드(200, 301, 404, 500 등)
+        
+    - 쿠키, 세션, JWT, OAuth2 인증 방식
+        
+- **실습**
+    
+    - DevTools Network 탭에서 API 요청/응답 분석
+        
+    - Postman/Insomnia로 JWT 인증 요청 실습
+        
+    - 간단한 로그인/로그아웃 흐름 만들어보기 (localStorage + JWT 흉내)
+        
+
+---
+
+### **3주차: 네트워크 심화**
+
+- **이론 학습**
+    
+    - CORS와 Same-Origin Policy
+        
+    - DNS(Domain Name System), CDN(Content Delivery Network), Proxy의 개념
+        
+- **실습**
+    
+    - CORS 에러 재현: FE/BE 다른 포트에서 호출
+        
+    - Nginx Proxy Pass 설정으로 CORS 우회
+        
+    - DNS 확인: `nslookup`, `dig` 명령어로 DNS 질의 과정 실습
+        
+
+---
+
+### **4주차: 종합 실습 & 정리**
+
+- **실습**
+    
+    - DevTools Network 탭으로 실제 서비스(API, 이미지, JS 번들 등) 요청/응답 분석
+        
+    - API 캐싱 전략 적용 (`Cache-Control`, `ETag`, `Service Worker` 활용)
+        
+- **정리**
+    
+    - 블로그나 노션에 “브라우저 동작 & 네트워크 기초” 학습 정리 글 작성
+        
+    - 주요 개념을 도식화 (예: 렌더링 파이프라인, 이벤트 루프 순서도, 인증 방식 비교표)
+        
+
+
+✅ **산출물 목표**
+
+1. 브라우저 렌더링 & 이벤트 루프 동작 정리 문서 (정리글 or 다이어그램)
+    
+2. HTTP/HTTPS & 인증 흐름 정리 노트
+    
+3. DevTools/실습 결과 캡쳐 + 정리 자료
+    
+4. API 캐싱 적용 예제 코드
+
+---
+## 📅 1주차: 브라우저 동작 원리 이해 (일일 계획)
+
+### **Day 1 – 렌더링 기본 흐름 이해**
+
+- **이론 (40분)**
+    
+    - 브라우저가 HTML → DOM, CSS → CSSOM을 만드는 과정
+        
+    - Render Tree, Layout, Paint, Composite 단계 정리
+        
+- **실습 (50분)**
+    
+    - 간단한 HTML+CSS 작성 후 DevTools Performance 탭으로 렌더링 확인
+        
+    - `will-change`, `transform`, `opacity` 속성이 렌더링에 미치는 영향 테스트
+        
+- **정리 (30분)**
+    
+    - DOM & CSSOM → Render Tree 흐름을 다이어그램으로 그려보기
+        
+
+---
+
+### **Day 2 – Reflow vs Repaint**
+
+- **이론 (40분)**
+    
+    - Reflow: 레이아웃 계산 재실행
+        
+    - Repaint: 픽셀 다시 그리기
+        
+    - 어떤 CSS 속성이 Reflow를 일으키는지 정리
+        
+- **실습 (50분)**
+    
+    - `width/height` 변경 시 Reflow 발생 여부 확인
+        
+    - `color`만 바꿀 때는 Repaint만 발생함을 DevTools로 확인
+        
+- **정리 (30분)**
+    
+    - “Reflow vs Repaint 비교표” 작성
+        
+
+---
+
+### **Day 3 – 이벤트 루프 기본**
+
+- **이론 (40분)**
+    
+    - Call Stack, Task Queue, Microtask Queue 구조
+        
+    - setTimeout, setInterval, Promise, async/await의 실행 순서
+        
+- **실습 (50분)**
+    
+    - `console.log`, `setTimeout`, `Promise.resolve`를 섞은 코드 실행 → 실행 순서 기록
+        
+    - DevTools Performance 탭에서 Call Stack 시각화
+        
+- **정리 (30분)**
+    
+    - Event Loop 순서를 글로 설명할 수 있게 정리
+        
+
+---
+
+### **Day 4 – 이벤트 루프 심화**
+
+- **이론 (40분)**
+    
+    - MacroTask vs MicroTask (setTimeout vs Promise vs MutationObserver)
+        
+    - 브라우저 렌더링 타이밍과의 관계
+        
+- **실습 (50분)**
+    
+    - async/await 안에서 setTimeout과 Promise를 섞어 실행 순서 확인
+        
+    - MutationObserver 활용 실험
+        
+- **정리 (30분)**
+    
+    - “MicroTask > MacroTask” 실행 순서를 다이어그램으로 정리
+        
+
+---
+
+### **Day 5 – 종합 실습**
+
+- **실습 (1시간)**
+    
+    - 렌더링 최적화: Reflow 최소화 코드 작성 (DOM 조작 시 `documentFragment`, `classList.toggle` 활용)
+        
+    - 이벤트 루프 시뮬레이션 문제 풀기 (실행 순서 예측 후 확인)
+        
+- **정리 (1시간)**
+    
+    - “브라우저 렌더링 & 이벤트 루프” 블로그/노션 정리 글 작성
+        
+    - 이번 주 학습 키워드(렌더링 파이프라인, Reflow/Repaint, Event Loop) 요약
+        
+
+---
+
+### **Day 6~7 – 주말 복습**
+
+- 부족한 부분 보충
+    
+- 블로그 글 다듬기 & 다이어그램 정리
+    
+- 면접 질문 대비:
+    
+    - “Reflow와 Repaint 차이를 설명해보세요”
+        
+    - “이벤트 루프에서 Promise와 setTimeout 실행 순서 차이를 말해보세요”
+        
+
+---
+
+✅ **1주차 산출물 목표**
+
+- 브라우저 렌더링 파이프라인 다이어그램
+    
+- Reflow/Repaint 비교표
+    
+- 이벤트 루프 실행 순서 예제 코드 + 정리 노트
+    
+- 노션/블로그에 정리 글 1편
+
+---
 
 ## 📝 진행 상황
+
 - 시작일: YYYY-MM-DD
 - 목표 완료일: YYYY-MM-DD
 - 현재 상태: 진행 중 / 완료
@@ -32,5 +254,6 @@
 ---
 
 ## 📌 회고
+
 - 이번 단계에서 어려웠던 부분:
 - 앞으로 보완할 것:
