reflow vs repaint vs composite

--- a/daily/1주차_브라우저 동작 원리 이해/25.09.01 렌더링 기본 흐름 이해.md
+++ b/daily/1주차_브라우저 동작 원리 이해/25.09.01 렌더링 기본 흐름 이해.md
@@ -13,7 +13,7 @@
 	- Composite
 	
 ##### 1. 브라우저가 HTML을 읽는 과정(HTML 파싱 → DOM 생성)
-1. 브라우저는 서버에서 HTML 문서를 받아오면 **byte stream**(바이트 스)트림) 상태로 저장합니다.
+1. 브라우저는 서버에서 HTML 문서를 받아오면 **byte stream**(바이트 스트림) 상태로 저장합니다.
 2. 이 스트림을 **문자셋(UTF-8 등)에 따라 문자**로 디코딩합니다.
 3. 문자를 **토큰(token)** 으로 쪼갭니다.
 	- `<html>`, `<body>`, `<div>` 같은 태그 시작/끝, 속성, 텍스트 등으로 분리.
@@ -112,11 +112,11 @@ box.style.width = "100px";
 box.style.height = "100px";
 box.style.margin = "20px";
 
-// good1 : 한 번에 스타일 변경 → Reflow 1번만 발생
+// good 1 : 한 번에 스타일 변경 → Reflow 1번만 발생
 const box = document.getElementById("box");
 box.style.cssText = "width:100px; height:100px; margin:20px;";
 
-// good2 : 미리 정의한 CSS 클래스 한 번에 적용
+// good 2 : 미리 정의한 CSS 클래스 한 번에 적용
 box.classList.add("big-box"); 
 ```
 
